Revision history for DBIx-SchemaChecksum

1.102	2017-07-19T10:10:28
   - even more docs


1.101	2017-06-28T09:02:57
    - explictly state File::HomeDir as a dependency (thanks CPANtesters)
    - more doc fixes


1.100   2017-06-25T22:13:35
    - finally implement NewChangesFile
    - add lots of docs
    - some various minor cleanups


1.006   2016-02-17T10:50:05
    - fix a deadly bad usage of try/catch (Thomas Klausner)
    - show_update_path now can dump the whole path as scripts or one concated file (Thomas Klausner)


1.005   2013-10-16T11:37:31+0200
    - more stable fix for foreign keys (Thomas Klausner)


1.004   2013-10-16T11:15:56+0200
    - ignore ORDINAL_POSITION in foreign keys (Thomas Klausner)


1.003   2013-10-09T15:02:40+0200
    - make foreign keys work with current DBI/DBD/Pg (Thomas Klausner)
    - removed given/when (Thomas Klausner)
    - say that there are "No more changes" instead of "No update found
      ..." (Jozef Kutej)
    - require MooseX::App 1.13 (Klaus Ita)
    - Better function introspection for postgres (breaks postgres
      checksums) (Maros Kollar)
    - fix test fails due to missing build_deps
    - Do not exit, but return instead (Maros Kollar)


1.002   2012-11-21T21:38:37+0100
    - require MooseX::App 1.08, which should fix the test fails
      reported by CPAN Testers (thanks!)
    - updated documentation


1.001   2012-11-15T17:40:04+0100
    - app now based on MooseX::App
    - lots of new options & commands
    - doc update still pending...
    - also use dzil


0.27   2009-04-23 22:21:29
    - remove schema name from nextval: because this causes a lot of 
      trouble - THIS WILL BREAK YOUR OLD CHECKSUMS!! (Thomas Klausner)
    - added option --dump_checksums which automatically dumps all 
      checksum sources (Thomas Klausner)


0.26   2008-11-24 11:35:07
    - sort unique keys because sometimes PG reports them in a 
      different order


0.25   2008-11-10 19:01:37