@@ -1,14 +1,4 @@
-blib*
-Makefile.PL
-Makefile
-Makefile.old
-Build
-_build*
-pm_to_blib*
-*.tar.gz
-.lwpcookies
 DBIx-SchemaChecksum-*
 cover_db
-MANIFEST.bak
-META.yml
-MYMETA.yml
+local/
+.build/
