@@ -1,0 +1,39 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Carp" => "0";
+requires "DBI" => "0";
+requires "Data::Dumper" => "0";
+requires "Digest::SHA1" => "0";
+requires "File::Find::Rule" => "0";
+requires "IO::Prompt::Tiny" => "0";
+requires "Moose" => "0";
+requires "Moose::Role" => "0";
+requires "Moose::Util::TypeConstraints" => "0";
+requires "MooseX::App" => "1.21";
+requires "MooseX::App::Command" => "0";
+requires "Path::Class" => "0";
+requires "Try::Tiny" => "0";
+requires "namespace::autoclean" => "0";
+requires "perl" => "5.010";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
+
+on 'test' => sub {
+  requires "DBD::SQLite" => "1.35";
+  requires "File::Copy" => "0";
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "Test::More" => "0";
+  requires "Test::Most" => "0";
+  requires "Test::Trap" => "0";
+  requires "lib" => "0";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
+};
