@@ -1,48 +1,13 @@
 name    = DBIx-SchemaChecksum
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 author  = Maroš Kollár <maros@cpan.org>
 author  = Klaus Ita <koki@worstofall.com>
 license = Perl_5
 copyright_holder = Thomas Klausner, Maroš Kollár, Klaus Ita
-copyright_year   = 2012
+copyright_year   = 2012 - 2021
 
-[GatherDir]
-exclude_match = local
-exclude_match = cpanfile.snapshot
+[@Author::DOMM]
+AutoPrereqs.skip = ^MakeTmpDb
 [Encoding]
 encoding = bytes
 filename = t/dbs/database.tpl
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-[ExecDir]
-[ShareDir]
-
-[Repository]
-[MetaResources]
-
-[CheckChangeLog]
-
-[Manifest]
-
-[TestRelease]
-[ConfirmRelease]
-[Prereqs]
-File::HomeDir = 0
-[AutoPrereqs]
-skip = ^MakeTmpDb
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-[CPANFile]
-[InstallGuide]
-
-[@Git]
-
