@@ -1,7 +1,9 @@
 package DBIx::SchemaChecksum::App::ShowUpdatePath;
-use 5.010;
 
 # ABSTRACT: Show the update path
+# VERSION
+
+use 5.010;
 
 use MooseX::App::Command;
 extends qw(DBIx::SchemaChecksum::App);
