@@ -1,5 +1,9 @@
 Revision history for DBIx-SchemaChecksum
 
+{{$NEXT}}
+    - dist housekeeping, Dist::Zilla::PluginBundle::Author::DOMM
+
+
 1.102	2017-07-19T10:10:28
    - even more docs
 
